--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.11",
     "msw": "^2.10.2",
+    "playwright": "^1.53.2",
     "prettier": "^3.4.2",
     "vite": "npm:rolldown-vite@latest",
     "vitest": "latest"
