feat(deploy): GitHub Pages 배포 워크플로우 추가
- GitHub Pages에 배포하기 위한 GitHub Actions 워크플로우 추가
- 빌드 및 배포 스크립트 추가
- 404 페이지 및 스타일 추가
- 라우터 경로에 BASE_PATH 적용

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build:prod": "NODE_ENV=production vite build",
+    "preview:prod": "NODE_ENV=production vite preview",
+    "deploy": "pnpm build:prod && pnpm preview:prod",
     "dev": "vite",
     "dev:hash": "vite --open ./index.hash.html",
     "build": "vite build",
